--- a/comp-mng-client/package.json
+++ b/comp-mng-client/package.json
@@ -18,11 +18,14 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@cds/angular": "^5.6.4",
+    "@cds/city": "^1.1.0",
+    "@cds/core": "^5.1.1",
     "@clr/angular": "^13.0.3",
-    "@clr/core": "^4.0.15",
     "@clr/icons": "^13.0.2",
     "@clr/ui": "^13.0.3",
     "@webcomponents/webcomponentsjs": "^2.6.0",
+    "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
