--- a/comp-mng-client/package.json
+++ b/comp-mng-client/package.json
@@ -26,6 +26,7 @@
     "@clr/icons": "^13.0.2",
     "@clr/ui": "^13.0.3",
     "@webcomponents/webcomponentsjs": "^2.6.0",
+    "ngx-toastr": "^15.0.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
